Assignment problems solutions added